update research page

--- a/research_page.html
+++ b/research_page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <title>Research</title>
-<meta charset="UTF-8">
+<meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="website.css">
+
 <body>
 
 <!-- Research -->
@@ -22,30 +23,44 @@
     </div>
   </div>
 </div>
+<hr>
+<!-- Row 1-->
+<!-- Research overview -->
 <br>
-<br>
-<br>
-<!-- Row 1 -->
-<div class="row-padding center margin-top">
+<hr>
+<div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
+    <div class="w3-half">
+        <div class="card container">
+      <h3>Much of my current work focuses on the Eastern Collared Lizard (Crotaphytus collaris)</h3>
+        <h4>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.</h4>
+        <hr>
+        <h4>Sex Determination</h4>
+        <hr>
+        <h4>A few years ago a research group definitively demonstrated that a lizard with obvious morphologically identifiable sex chromosomes could undergo a complete phenotypic sex change in the presence of extreme egg incubation temperatures. Not only does the bearded dragon switch sex, it does it with style. Sex-switched (non-concordant) females produce more eggs than sex-concordant females!</h4>
+        <h4>Soon after the publication of this (very exciting!) discovery a collegue (Dr. Enrique Santoyo-Brito) started asking if perhaps the unusual hatchling ratios he was seeing in his incubation experiments could be due to sex-reversal in Crotaphytus collaris and the rest is, as they say, history (or maybe future because we sooo aren't there yet). We've been chasing down the genetics of sex determination in collared lizards ever since.</h4>
+        <h4>So far, using gene dosage analysis, we've produced evidence that strongly points to and XX/XY sex determination system in C. collaris (as opposed to ZZ/ZW in bearded dragons) and hints at sex reversal in hatchlings incubated at extreme high and low temperatures. We came up against a hurdle when attempting to use Y-chromosome markers from other lizard species (they wouldn't amplify) so now we are attempting to create our own. Undergraduate researcher, Zane Pederson, is analyzing ddRAD data collected by Alex Krohn, searching for areas of the collared lizard genome that are different between males and females. We have some preliminary data that looks promising!</h4>
+      </div>
+    </div>
 
-<!-- Lizard img -->
-  <div class="half">
+<br>
+  <div class="w3-half">
     <div class="card container">
-  <img src = "img/lizard1.jpg" alt = "collared lizard" style="width:450px; height:250px;margin-right:15px;">
+      <div class="w3-content w3-section" style="max-width:500px">
+      <img class="mySlides" src="img/lizard1.jpg" style="width:100%">
+      <img class="mySlides" src="img/wiggins_dam2.jpg" style="width:100%">
+      <img class="mySlides" src="img/wiggins_labbench.jpg" style="width:100%">
+      <img class="mySlides" src="img/wiggins_hatchling.jpg" style="width:100%">
+      <img class="mySlides" src="img/nice_hob.jpg" style="width:100%">
+      </div>
     </div>
   </div>
+</div>
 
-<!-- Research overview -->
-  <div class="half">
-    <div class="card container">
-    <h2>Much of my current work focuses on the Eastern Collared Lizard (Crotaphytus collaris)</h2>
-      <h3>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.</h3>
-    </div>
-  </div>
 
-<br>
-
-<!-- Research overview -->
+<!-- Row 2-->
+<!-- Resources -->
+<hr>
+<div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
   <div class="half">
     <div class="card container">
     <h2>Some genomics analysis "easy buttons"</h2>
@@ -55,9 +70,21 @@
       <h3>To analyze genomics data without having to have tons of computational space or be able to script <a href="usegalaxy.eu"target="_blank">usegalaxy.eu</a></h3>
     </div>
   </div>
-
-
-</header>
-</body>
 </div>
+
+<script src="index.js"></script>
+</body>
+
 <!-- End page content -->
+
+<!-- About -->
+<hr>
+<div class="footer">
+<hr>
+<p>
+  Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
+</p>
+</div>
+
+
+</html>
