--- a/resources_page.html
+++ b/resources_page.html
@@ -28,52 +28,126 @@
 <!-- Row 1 -->
 <div class="row-padding center margin-top">
 
-<!-- Teaching Resources -->
+  <!-- Genetics Teaching Resources -->
+    <div class="half">
+      <div class="card container">
+        <h3> GENETICS TEACHING </h3>
+        <hr>
+        <hr>
+        <h4> Misuse of Genetics </h4>
+        <hr>
+
+        <h4><a href="https://rdcu.be/b6d2J"target="_blank">Anti-Racism toolkit for the Genetics educator</a></h4>
+        <h5><a href="https://twitter.com/prof_dasguptaby"target="_blank">by Dr. Shoumita Dasgupta</a></h5>
+        <h5><a href="https://twitter.com/APHMG1/status/1268572868901650432?s=20"target="_blank">Twitter thread with links </a></h5>
+        <hr>
+
+        <h4><a href="http://pged.org/"target="_blank">The Personal Genetics Education Project</a></h4>
+        <hr>
+
+        <h4><a href="https://twitter.com/GenomicsSalon/status/1273363365386088449?s=20"target="_blank">Toolkit:Race, Ethics, and Justice in Genetics </a></h4><h5>by @GenomicsSalon</h5>
+        <hr>
+
+        <h4><a href=" https://twitter.com/AimiHamraie/status/1292836813070106625?s=20"target="_blank">Eugenics Syllabus</a></h4>
+        <h5><a href="https://mapping-access.com"target="_blank">by Aimi Hamraie</a></h5>
+        <hr>
+
+        <h4><a href="https://t.co/nYmRkMXZKV?amp=1"target="_blank">Signaling Inclusivity in Undergraduate Biology Courses through Deliberate Framing of Genetics Topics Relevant to Gender Identity, Disability, and Race</a></h4>
+        <h5><a href="https://www.davidson.edu/people/karen-g-hales"target="_blank">by Dr. Karen G. Hales</a></h5>
+        <hr>
+
+        <h3> Freely available textbooks</h3>
+        <hr>
+        <h4><a href="https://bio.libretexts.org/Bookshelves/Genetics/Book%3A_Online_Open_Genetics_(Nickle_and_Barrette-Ng)"target="_blank">Online Open Genetics</a></h4>
+        <hr>
+
+        <h4><a href="https://era.library.ualberta.ca/public/view/item/uuid:405c04c1-1b18-4943-bacb-5e128e890f03"target="_blank">Open Genetics, Michael Deyholos</a></li>
+        <hr>
+
+        <h4><a href="https://openstax.org/details/books/biology-2e"target="_blank">Open Stax Biology</a></li>
+        <hr>
+
+        <h4><a href="https://dataverse.library.ualberta.ca/dataset.xhtml?persistentId=doi:10.7939/DVN/XMUPO6"target="_blank">Open Genetics Lectures, John Locke</a></h4>
+
+        <h5>More updated as I can!</h5>
+      </div>
+    </div>
+
+<!-- Evolution Teaching Resources -->
   <div class="half">
     <div class="card container">
-      <h3> TEACHING </h3>
+      <h3> EVOLUTION TEACHING </h3>
       <hr>
       <hr>
-      <h3><a href="https://jwiggi18.github.io/phyloEd/"target="_blank">Phylotastic Ed</a></h3>
+      <h4><a href="https://jwiggi18.github.io/phyloEd/"target="_blank">Phylotastic Ed</a></h4>
       <p>my own collaboratively built suite of resources that I unabashedly put at the top of this list ;). </p>
       <hr>
-      <h3><a href="https://education.eol.org/"target="_blank">Encyclopedia of Life</a></h3>
+      <h4><a href="https://education.eol.org/"target="_blank">Encyclopedia of Life</a></h4>
       <p>lesson plans for K-12, podcasts, google earth tours, and speices cards </p>
       <hr>
-      <h3><a href="https://www.biodiversityliteracy.com/get-involved"target="_blank">Biodiversity Literacy in Undergraduate Education</a></h3>
+      <h4><a href="https://www.biodiversityliteracy.com/get-involved"target="_blank">Biodiversity Literacy in Undergraduate Education</a></h4>
       <hr>
-      <h3><a href="http://www.evolutionsociety.org/index.php?module=content&type=user&func=view&pid=25"target="_blank">Society for the Study of Evolution</a></h3>
+      <h4><a href="http://www.evolutionsociety.org/index.php?module=content&type=user&func=view&pid=25"target="_blank">Society for the Study of Evolution</a></h4>
       <p>Landing page for SSE's "Resouces for Teachers and Students." This is a list of 20 + resources for teaching evolution including course units, lesson plans, videos, and links to programs and workshops.  </p>
       <hr>
-      <h3><a href="http://www.ucmp-demo.berkeley.edu/education/index.php"target="_blank">University of California Museum of Paleontology</a></h3>
+      <h4><a href="http://www.ucmp-demo.berkeley.edu/education/index.php"target="_blank">University of California Museum of Paleontology</a></h4>
       <p>hosts K-12 teacher and student resources</p>
       <hr>
-      <h3>More updated as I can!</h3>
+      <h4>More updated as I can!</h4>
     </div>
   </div>
+<br>
+<br>
 
+<!-- Row 2 -->
+<div class="w3-row-padding w3-center w3-margin-top">
+  <br>
+  <br>
 <!-- Diversity Resources -->
   <div class="half">
     <div class="card container">
-    <h3> INCLUSION AND EQUITY </h3>
+    <h3> INCLUSION AND EQUITY IN STEM</h3>
     <hr>
     <hr>
 
-    <h4>I'm working to identify the best way for me, as a white academic, to be an ally. As I better understand how to do that I will curate this section. For now find a few links below.
+    <h5>I'm working to identify the best way for me, as a white academic, to be an ally. As I better understand how to do that I will curate this section. For now find a few links below.
       <hr>
 
-      <h3><a href="https://medium.com/@solonorthrowan/an-open-letter-to-the-eeb-community-7bd89330e554"target="_blank">An open letter to the EEB community</a></h3>
+      <h4><a href="https://t.co/OPzWodgUlq?amp=1"target="_blank"> Syllabus for "Introduction to Inclusion, Diversity, Equity, and Anti-racism in Biology" </a></h4>
+      <h5><a href="https://twitter.com/Ray_L_Allen"target="_blank">by Ray L. Allen, </a></h5>
+      <h5><a href="https://twitter.com/anita_simha"target="_blank">Anita Simha,</a></h5>
+      <h5> and Lauren Carley <h5>
+      <hr>
+
+      <h5><a href="https://twitter.com/AlzScience/status/1292876743087239169?s=20"target="_blank"> "Responses to 10 Common Criticisms of Anti-Racism Action in STEM." </a></h5>
+      <hr>
+
+      <h4><a href="https://medium.com/@solonorthrowan/an-open-letter-to-the-eeb-community-7bd89330e554"target="_blank">An open letter to the EEB community</a></h4>
       <p>"This letter was authored by a number of people at different institutions, and representing all career stages. We write this letter in a composite voice representing a variety of Black, Indigenous, and other People of Color (BIPOC) experiences. The letter emerged from the heat of ongoing events and an opportunity to contribute our voices to a constructive future. You may read this as an unsolicited screed, or you may read this as the cry of our desperation, but what it is not is an attempt to shame white people.""</p>
       <hr>
 
-      <h3><a href="https://www.nature.com/articles/d41586-020-01883-8"target="_blank">What Black scientists want from colleagues and their institutions</a></h3>
+      <h4><a href="https://www.nature.com/articles/d41586-020-01883-8"target="_blank">What Black scientists want from colleagues and their institutions</a></h4>
       <hr>
 
-      <h3><a href="https://nam04.safelinks.protection.outlook.com/?url=https%3A%2F%2Fdocs.google.com%2Fdocument%2Fu%2F0%2Fd%2F1alhpbjj9fuh6UT40S0Yih3GsB90fYL8O33Py8uq0XJ8%2Fmobilebasic%3Ffbclid%3DIwAR3ShtgmLNT5G_guay2tVQdR6ged8h9ZZEZhxRq0u7pMyyv2mKZ9CK_aSY8%26pli%3D1&data=02%7C01%7Crachel.hartnett%40okstate.edu%7C1ac2630c3edd472dc40008d81dc05642%7C2a69c91de8494e34a230cdf8b27e1964%7C0%7C0%7C637292059230627711&sdata=me1yjyVgkWNkDjQ%2B3N3hKfsQZDVm6PShoGANm%2FeNKA8%3D&reserved=0">Anti-racism lesson plans for educators</a></h3>
+      <h4><a href="https://nam04.safelinks.protection.outlook.com/?url=https%3A%2F%2Fdocs.google.com%2Fdocument%2Fu%2F0%2Fd%2F1alhpbjj9fuh6UT40S0Yih4GsB90fYL8O33Py8uq0XJ8%2Fmobilebasic%3Ffbclid%3DIwAR3ShtgmLNT5G_guay2tVQdR6ged8h9ZZEZhxRq0u7pMyyv2mKZ9CK_aSY8%26pli%3D1&data=02%7C01%7Crachel.hartnett%40okstate.edu%7C1ac2630c3edd472dc40008d81dc05642%7C2a69c91de8494e34a230cdf8b27e1964%7C0%7C0%7C637292059230627711&sdata=me1yjyVgkWNkDjQ%2B3N3hKfsQZDVm6PShoGANm%2FeNKA8%3D&reserved=0">Anti-racism lesson plans for educators</a></h4>
       <hr>
 
-      <h3><a href="https://jodiewiggins.wixsite.com/mysite/diversity-resources">My resources page from my old website</a></h3>
+      <h4><a href="https://jodiewiggins.wixsite.com/mysite/diversity-resources">My resources page from my old website</a></h4>
     </div>
   </div>
 
 </div>
+</body>
+
+<!-- About -->
+<hr>
+<div class="footer">
+<hr>
+<p>
+  Site is maintained by Dr. Jodie Wiggins: jodie (dot) wiggins (at) okstate (dot) edu
+</p>
+</div>
+
+
+
+</html>
