--- a/people_page.html
+++ b/people_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>People</title>
+<title>About Me</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -16,7 +16,7 @@
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
-      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Projects</a>
       <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
