--- a/resources_page.html
+++ b/resources_page.html
@@ -16,8 +16,8 @@
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
-      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
-      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Projects</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">About Me</a>
 
     </div>
   </div>
