--- a/teaching_page.html
+++ b/teaching_page.html
@@ -15,8 +15,8 @@
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
-      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Projects</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">About Me</a>
       <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
