add genetics course link

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br>
 
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
+      In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles (see projects).
     </p>
 
     <br>
 
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      I've developed an maintain several science education websites and have the priviledge to teach biology courses at Oklahoma State University. 
+      I've developed and maintain several science education websites (see projects) and have the priviledge to teach biology courses at Oklahoma State University (see teaching). 
     </p>
 
 
