--- a/teaching_page.html
+++ b/teaching_page.html
@@ -34,7 +34,8 @@
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Courses</h3>
   <p>In vaious semesters I teach or have taught:
   </p>
-  <p>General Genetics
+  <p>
+  <a href="https://jwiggi18.github.io/gengen_syllabus/" target="blank">General Genetics</a>
   </p>
   <p>Human Heredity
   </p>
