--- a/research_page.html
+++ b/research_page.html
@@ -83,6 +83,9 @@
       <h5>To quickly and easily download SRA data <a href="sra-explorer.info"target="_blank">sra-explorer.info</a></h5>
     <hr>
       <h5>To analyze genomics data without having to have tons of computational space or be able to script <a href="usegalaxy.eu"target="_blank">usegalaxy.eu</a></h5>
+    <hr>
+      <h5> A list of functional genomics assay technologies maintained by Dr. Lior Pachter: <a
+      href="https://liorpachter.wordpress.com/seq/" target="_blank">Star-Seq</a></h5>
     </div>
   </div>
 </div>
