--- a/resources_page.html
+++ b/resources_page.html
@@ -34,6 +34,8 @@
         <h3> GENETICS TEACHING </h3>
         <hr>
         <hr>
+        <h4><a href="https://genetics-gsa.org/education/genetics-learning-framework/" target="_blank">Genetics Society of America (GSA). (2015). Core Concepts and Core Competencies.</a></h4>
+        <hr>
         <h4> Misuse of Genetics </h4>
         <hr>
 
@@ -136,7 +138,37 @@
     </div>
   </div>
 
-</div>
+
+
+  <!-- Genetics Teaching Resources -->
+  <div class="half">
+    <div class="card container">
+      <h3> EFFECTIVE TEACHING - GENERAL </h3>
+      <hr>
+      <hr>
+  
+      <h5><a href="https://www.colorado.edu/sei/resources/instructor-guidance" target="_blank">Classroom Transformation Guide by Science Education Inititive, University of Colorado Boulder (extensive references)</a></h5>
+      <hr>
+      <h5><a href="https://academic.oup.com/bioscience/advance-article/doi/10.1093/biosci/biz069/5530926" target="_blank">Ballen, C. et al. (2019) Smaller Classes Promote Equitable Student Participation in STEM, BioScience, 69, 669-680.</a></h5>
+      <hr>
+      <h5><a href="https://www.thriftbooks.com/w/talent-is-overrated-what-really-separates-world-class-performers-from-everybody-else_geoff-colvin/251953/item/3950274/?gclid=CjwKCAiA_omPBhBBEiwAcg7smdk0TTUqa3whb7JCyZ1VlzHYD12DBZhKa9vz0bdd4344s4Ms7BlclRoCPfQQAvD_BwE#idiq=3950274&edition=5624599" target="_blank">Colvin, G. (2008) Talent is Overrated: What Really Separates World-Class Performers from Everybody Else, Penguin Books</a></h5>
+      <hr>
+      <h5><a href="https://eprints.glos.ac.uk/3609/" target="_blank">Gibbs, G., & Simpson, C. (2005). Conditions Under Which Assessment Supports Students’ Learning. Learning and Teaching in Higher Education, 1, 3–31.</a></h5>
+      <hr>
+  
+      
+    </div>
+  </div>
+
+  </div>
+  <!-- Next topic -->
+  <div class="half">
+    <div class="card container">
+
+    </div>
+  </div>
+  <br>
+  <br>
 </body>
 
 <!-- About -->
