add linkedin and github links

--- a/people_page.html
+++ b/people_page.html
@@ -42,3 +42,18 @@
   <p>If you are interested an a narrative 'about me' you can find that <a href="https://jwiggi18.github.io/gengen_syllabus/instructional_team.html" target="blank">here.</a></p>
 </div>
 </body>
+
+<!-- About -->
+<hr>
+<div style="margin-left:20%" class="footer">
+  <a href="https://www.linkedin.com/in/jodie-wiggins-b77257149/">
+    <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
+  </a>
+  <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
+      style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <hr>
+  <p>
+    Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
+  </p>
+</div>
