--- a/resources_page.html
+++ b/resources_page.html
@@ -112,7 +112,7 @@
     <hr>
     <hr>
 
-    <h5>I'm working to identify the best way for me, as a white academic, to be an ally. As I better understand how to do that I will curate this section. For now find a few links below.
+    <h5>I'm working to identify the best ways for me, as a white scientist and educator, to be an ally. As I better understand how to do that I will grow and prune this section.
       <hr>
 
       <h4><a href="https://t.co/OPzWodgUlq?amp=1"target="_blank"> Syllabus for "Introduction to Inclusion, Diversity, Equity, and Anti-racism in Biology" </a></h4>
@@ -161,7 +161,7 @@
   </div>
 
   </div>
-  <!-- Next topic -->
+  <!-- Next topic 
   <div class="half">
     <div class="card container">
 
@@ -170,14 +170,21 @@
   <br>
   <br>
 </body>
+-->
 
 <!-- About -->
 <hr>
-<div class="footer">
-<hr>
-<p>
-  Site is maintained by Dr. Jodie Wiggins: jodie (dot) wiggins (at) okstate (dot) edu
-</p>
+<div style="margin-left:20%" class="footer">
+  <a href="https://www.linkedin.com/in/jodie-wiggins-b77257149/">
+    <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
+  </a>
+  <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
+      style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <hr>
+  <p>
+    Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
+  </p>
 </div>
 
 
