--- a/teaching_page.html
+++ b/teaching_page.html
@@ -32,10 +32,13 @@
 <!-- Course List -->
 <div class="w3-container w3-padding-32" id="courses">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Courses</h3>
-  <p>In vaious semesters I teach or have taught:
+  <p>In various semesters I teach or have taught:
   </p>
   <p>
   <a href="https://jwiggi18.github.io/gengen_syllabus/" target="blank">General Genetics</a>
+  </p>
+  <p>
+  <a href="https://github.com/jwiggi18/intro_genomics" target="blank">Introductory Genomics</a>
   </p>
   <p>Human Heredity
   </p>
@@ -48,17 +51,27 @@
 <!-- Teaching Resources -->
 <div class="w3-container w3-padding-32" id="courses">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
-  <p>Find a full list of teaching resources on the resources page.
+  <p>Find a full list of teaching resources on the <a href="https://jwiggi18.github.io/resources_page.html" target="blank">resources page</a>.
   </p>
 </div>
 <!-- End page content -->
 
 
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
+<!-- About -->
+<hr>
+<div style="margin-left:20%" class="footer">
+  <a href="https://www.linkedin.com/in/jodie-wiggins-b77257149/">
+    <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
+  </a>
+  <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
+      style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <hr>
+  <p>
+    Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
+  </p>
+</div>
 
 </body>
 </html>
