--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- About -->
 <hr>
 <div style="margin-left:20%" class="footer">
+  <a href="https://www.linkedin.com/in/jodie-wiggins-b77257149/">
+    <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
+  </a>
+  <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo" style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
   <hr>
   <p>
     Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
