add youtube link

--- a/index.html
+++ b/index.html
@@ -53,20 +53,25 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h1 class="w3-jumbo" style="display:block;width:100%;margin:auto;"><b>Jodie Wiggins</b></h1>
     <br>
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      I'm a researcher and educator passionate about breaking down barriers between knowledge and people.
+      I'm a educator and researcher passionate about breaking down barriers between knowledge and people.
     </p>
 
     <br>
 
+    <p style="display:block;width:100%;margin:auto;font-size:large">
+      I've developed and maintain several science education websites (see projects) and have the privilege to teach biology
+      courses at Oklahoma State University (see teaching).
+    </p>
+
+    <br>
+    
     <p style="display:block;width:100%;margin:auto;font-size:large">
       In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles (see projects).
     </p>
 
-    <br>
 
-    <p style="display:block;width:100%;margin:auto;font-size:large">
-      I've developed and maintain several science education websites (see projects) and have the priviledge to teach biology courses at Oklahoma State University (see teaching). 
-    </p>
+
+
 
 
   </header>
@@ -81,6 +86,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
   </a>
   <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo" style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA"><img src="img/youtube.png" alt="github logo" style="width: 50px; height 50px; padding-right: 10px;">
   </a>
   <hr>
   <p>
