--- a/people_page.html
+++ b/people_page.html
@@ -22,9 +22,9 @@
     </div>
   </div>
 </div>
-
+<hr>
 <div style="padding:30px">
-<img src = "img/jodie_teaching.jpg" alt = "Jodie Teaching" style="width:600px; height:450px;margin-right:15px;">
+<img src = "img/collage.jpg" alt = "Jodie Teaching" style="width:600px; height:500px;margin-right:15px;">
 
 
   <h5>EDUCATION</h5>
@@ -35,7 +35,7 @@
 
   <h5>EXPERIENCE</h5>
     
-  <p>As of Fall 2021 I have been teaching science for 14 years and researching evolution through the lense of genetics for 11.</p>
+  <p>As of Fall 2022 I have been teaching science for 15 years and researching evolution through the lens of genetics for 12.</p>
  
   <h5>NARRATIVE</h5>
     
@@ -51,6 +51,9 @@
   </a>
   <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
       style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA"><img src="img/youtube.png" alt="github logo"
+        style="width: 50px; height 50px; padding-right: 10px;">
   </a>
   <hr>
   <p>
