--- a/research_page.html
+++ b/research_page.html
@@ -35,6 +35,7 @@
       <hr>
       <h3>Much of my current research focuses on the Eastern Collared Lizard (Crotaphytus collaris)</h3>
         <h5>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.</h5>
+        <img src="img/lizard1.jpg" alt="gaping lizard being held" style="width:400px; height:300px;margin-right:15px;">
         <hr>
         <h4>Sex Determination</h4>
         <hr>
@@ -103,6 +104,9 @@
   </a>
   <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
       style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA"><img src="img/youtube.png" alt="github logo"
+        style="width: 50px; height 50px; padding-right: 10px;">
   </a>
   <hr>
   <p>
