--- a/resources_page.html
+++ b/resources_page.html
@@ -181,6 +181,9 @@
   <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
       style="width: 50px; height 50px; padding-right: 10px;">
   </a>
+  <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA"><img src="img/youtube.png" alt="github logo"
+        style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
   <hr>
   <p>
     Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
