--- a/teaching_page.html
+++ b/teaching_page.html
@@ -48,6 +48,11 @@
   </p>
 </div>
 
+<!-- YouTube -->
+<div class="w3-container w3-padding-32" id="youtube">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">You can find some of my instructional videos on my <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA" target="blank">YouTube channel</a></h3>
+</div>
+
 <!-- Teaching Resources -->
 <div class="w3-container w3-padding-32" id="courses">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
@@ -66,6 +71,9 @@
   </a>
   <a href="https://github.com/jwiggi18"><img src="img/github.png" alt="github logo"
       style="width: 50px; height 50px; padding-right: 10px;">
+  </a>
+  <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA"><img src="img/youtube.png" alt="github logo"
+        style="width: 50px; height 50px; padding-right: 10px;">
   </a>
   <hr>
   <p>
