--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h1 class="w3-jumbo" style="display:block;width:100%;margin:auto;"><b>Jodie Wiggins</b></h1>
     <br>
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      I'm a educator and researcher passionate about breaking down barriers between knowledge and people.
+      I'm an educator and researcher passionate about breaking down barriers between knowledge and people.
     </p>
 
     <br>
@@ -64,7 +64,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </p>
 
     <br>
-    
+
     <p style="display:block;width:100%;margin:auto;font-size:large">
       In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles (see projects).
     </p>
