--- a/people_page.html
+++ b/people_page.html
@@ -28,13 +28,19 @@
 
 
   <h5>EDUCATION</h5>
+  <hr>
 
   <p>PhD Integrative Biology, Oklahoma State University - 2018</p>
   <p>MS Biology, Midwestern State University - 2010</p>
   <p>Teacher Certification, Midwestern State University - 2006</p>
 
   <h5>EXPERIENCE</h5>
-    
+  <hr> 
+  <h3>Teaching Assistant Professor</h3>
+  <h3>Pylotastic Education Team Lead (post-doctoral researcher)</h3>
+  <h3>PhD researcher & teacher</h3>
+  <h3>Masters researcher & teacher</h3>
+  <h3>K-12 General Sciences Teacher</h3>
   <p>As of Fall 2022 I have been teaching science for 15 years and researching evolution through the lens of genetics for 12.</p>
  
   <h5>NARRATIVE</h5>
