--- a/people_page.html
+++ b/people_page.html
@@ -42,9 +42,37 @@
   <p>K-12 General Sciences Teacher</p>
   <p>As of Fall 2022 I have been teaching science for 15 years and researching evolution through the lens of genetics for 12.</p>
  
-  <h5>NARRATIVE</h5>
-    
-  <p>If you are interested an a narrative 'about me' you can find that <a href="https://jwiggi18.github.io/gengen_syllabus/instructional_team.html" target="blank">here.</a></p>
+<hr>
+  <h5>LEADERSHIP AND COMMUNITY BUILDING</h5>
+ <hr>
+  <p>Code of Conduct Committee, Evolution Tri-Societies</p>
+  <p>EvoAlly, Evolution conference</p>
+  <p>Chair, Graduate Student Advisory Council, Society for the Study of Evolution</p>
+  <p>Mentor, Undergraduate Day at Evolution / Cimarron Middle School Science Fair</p>
+  <p>Coordinator, Diversity and Inclusion, Central Ecology and Evolution Conferences</p>
+  <p>Invited Guest Contributor: 2017, Femininity and Fieldwork: Dispatches from the Field
+  2017, Evolution 2017: Are We Wrong about Territoriality in Anolis Lizards? Anole Annals
+</p>
+
+<hr>
+ <h5>PRODUCTS</h5>
+ <hr>
+ <h6><b>Websites</b></h6>
+  <p><a href="https://jwiggi18.github.io/phyloEd/">Phylotastic Ed.</a></p>
+  <p><a href="http://historyofearth.net/">History of Earth</a></p>
+  <p><a href="https://jwiggi18.github.io/phylogenies_as_models/">Phylogenies as Models</a></p>
+
+<h6><b>Workshops</b></h6>
+  <p>eScience Tools, Subject Specialist - Educator Workshop</p>
+  <p><a href=""></a></p>
+<h6><b>Courses and Curriculum</b></h6>
+  <p><a href="https://jwiggi18.github.io/gengen_syllabus/">General Genetics, course virtual syllabus</a></p>
+  <p><a href="https://github.com/jwiggi18/intro_genomics">Introductory Genomics, course GitHub repository</a></p>
+  <p><a href="https://drive.google.com/drive/folders/1FKRD7VHQYNxK5ypAEURqSVD5z6MZossn">History of Earth 5Es lesson plan</a></p>
+<h6><b>Peer Reviewed Publications</b></h6>
+  <p>Nguyen, V; Nguyen, T; Md. T, Abu S; Laughinghouse, III, H. ; Sánchez-Reyes, L; Wiggins, JM; Pontelli, E; Mozzherin, D; O'Meara, B; Stoltzfus, A. 2020. Phylotastic: improving access to tree-of-life knowledge with flexible, on-the-fly delivery of trees. Evolutionary Bioinformatics.</p><p><a href=""></a></p>
+  <p>Wiggins JM, JB Scales, E Santoyo-Brito, SF Fox. 2018. Gene dose indicates presence of sex microchromosomes in collared lizards (<i>Crotaphytus collaris</i>), a species with termperature-influenced sex determination. Herpetologica.</p><p><a href=""></a></p>
+  <p>Wiggins JM; Landers J; Agan,J; Fox SF. When do young Collard Lizards (<i>Crotaphytus collaris</i>) first copulate with and fertilize females? Herpetologica. <i>In review</i>.</p>
 </div>
 </body>
 
