add links to about me

--- a/people_page.html
+++ b/people_page.html
@@ -24,7 +24,7 @@
 </div>
 <hr>
 <div style="padding:30px">
-<img src = "img/collage.jpg" alt = "Jodie Teaching" style="width:600px; height:500px;margin-right:15px;">
+<img src = "img/collage.jpg" alt = "Jodie Teaching" style="width:500px; height:500px;margin-right:15px;">
 
 <hr>
   <h5>EDUCATION</h5>
@@ -63,16 +63,19 @@
   <p><a href="https://jwiggi18.github.io/phylogenies_as_models/">Phylogenies as Models</a></p>
 
 <h6><b>Workshops</b></h6>
-  <p>eScience Tools, Subject Specialist - Educator Workshop</p>
-  <p><a href=""></a></p>
+  <p><a href="https://www.esciencetools.org/">eScience Tools, Subject Specialist - Educator Workshop</a></p>
+
 <h6><b>Courses and Curriculum</b></h6>
   <p><a href="https://jwiggi18.github.io/gengen_syllabus/">General Genetics, course virtual syllabus</a></p>
   <p><a href="https://github.com/jwiggi18/intro_genomics">Introductory Genomics, course GitHub repository</a></p>
   <p><a href="https://drive.google.com/drive/folders/1FKRD7VHQYNxK5ypAEURqSVD5z6MZossn">History of Earth 5Es lesson plan</a></p>
+  
 <h6><b>Peer Reviewed Publications</b></h6>
-  <p>Nguyen, V; Nguyen, T; Md. T, Abu S; Laughinghouse, III, H. ; Sánchez-Reyes, L; Wiggins, JM; Pontelli, E; Mozzherin, D; O'Meara, B; Stoltzfus, A. 2020. Phylotastic: improving access to tree-of-life knowledge with flexible, on-the-fly delivery of trees. Evolutionary Bioinformatics.</p><p><a href=""></a></p>
-  <p>Wiggins JM, JB Scales, E Santoyo-Brito, SF Fox. 2018. Gene dose indicates presence of sex microchromosomes in collared lizards (<i>Crotaphytus collaris</i>), a species with termperature-influenced sex determination. Herpetologica.</p><p><a href=""></a></p>
+<p><a href="https://doi.org/10.1655/Herpetologica-D-19-00036">Wiggins JM, JB Scales, E Santoyo-Brito, SF Fox. 2018. Gene dose indicates presence of sex microchromosomes in collared
+  lizards (<i>Crotaphytus collaris</i>), a species with termperature-influenced sex determination. Herpetologica.</a></p>
   <p>Wiggins JM; Landers J; Agan,J; Fox SF. When do young Collard Lizards (<i>Crotaphytus collaris</i>) first copulate with and fertilize females? Herpetologica. <i>In review</i>.</p>
+  <p><a href="https://doi.org/10.1177/1176934319899384">Nguyen, V; Nguyen, T; Md. T, Abu S; Laughinghouse, III, H. ; Sánchez-Reyes, L; Wiggins, JM; Pontelli, E; Mozzherin,
+    D; O'Meara, B; Stoltzfus, A. 2020. Phylotastic: improving access to tree-of-life knowledge with flexible, on-the-fly delivery of trees. Evolutionary Bioinformatics.</a></p>
 </div>
 </body>
 
